--- a/package.json
+++ b/package.json
@@ -21,38 +21,67 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "@nestjs-modules/mailer": "^1.6.0",
+    "@nestjs/axios": "0.0.2",
     "@nestjs/common": "^8.0.11",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.1.0",
+    "@nestjs/mongoose": "^8.0.0",
+    "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/swagger": "^5.0.9",
     "@nestjs/typeorm": "^7.1.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/hapi__joi": "^17.1.7",
+    "@types/multer-gridfs-storage": "^4.0.4",
+    "bcrypt": "^5.0.1",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
+    "joi": "^17.4.2",
+    "mongo-gridfs": "^1.1.0",
     "mongodb": "^3.6.0",
+    "mongoose": "^5.13.5",
+    "multer-gridfs-storage": "^5.0.2",
+    "nestjs-joi": "^1.4.0",
+    "nestjs-real-ip": "^2.0.0",
+    "nodemailer": "^6.6.3",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "typeorm": "^0.2.38"
+    "ts-md5": "^1.2.9",
+    "typeorm": "^0.2.38",
+    "xmlhttprequest-ts": "^1.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.1",
+    "@nestjs/cli": "^8.1.1",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
+    "@types/express": "^4.17.3",
+    "@types/jest": "25.2.3",
     "@types/mongodb": "^3.5.26",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^27.0.6",
-    "prettier": "^2.3.2",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "@types/multer": "^1.4.7",
+    "@types/node": "^13.9.1",
+    "@types/nodemailer": "^6.4.4",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "3.0.2",
+    "@typescript-eslint/parser": "3.0.2",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "jest": "26.0.1",
+    "prettier": "^1.19.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "26.1.0",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.2",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.9.10"
   },
   "jest": {
     "moduleFileExtensions": [
